--- a/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/CreatLeadScreen.fx.yaml
@@ -1,6 +1,7 @@
 CreatLeadScreen As screen:
     OnVisible: |-
-        =If(IsBlank(IntxtContractNumber),Set(VarContractNumber,false));
+        =Set(varshowMenu,!varshowMenu);
+        If(IsBlank(IntxtContractNumber),Set(VarContractNumber,false));
         If(IsBlank(IntxtAddress),Set(VarAddress,false));
         If(IsBlank(IntxtBuildingName),Set(VarBuildingName,false));
         If(IsBlank(IntxtZipCode),Set(VarZipcode,false));
@@ -41,7 +42,7 @@ CreatLeadScreen As screen:
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =Parent.Height
                 Icon: =Icon.Hamburger
-                OnSelect: =
+                OnSelect: =Set(varshowMenu,!varshowMenu)
                 PaddingBottom: =Parent.Height/3
                 PaddingTop: =Parent.Height/3
                 Width: =Parent.Height
@@ -810,4 +811,73 @@ CreatLeadScreen As screen:
                     Transparency: =0.9
                     Width: =Parent.Width
                     ZIndex: =1
+
+    "glryMenuBarCS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        BorderColor: =RGBA(255, 255, 255, 1)
+        BorderThickness: =1
+        Fill: =RGBA(237, 237, 237, 1)
+        Height: =1.08*(CountRows(glryMenuBarCS.AllItems)*(glryMenuBarCS.TemplateHeight))
+        Items: =Menu
+        Layout: =Layout.Vertical
+        ShowScrollbar: =false
+        TemplatePadding: =0
+        TemplateSize: =90
+        Visible: =varshowMenu
+        Width: =Parent.Width/4
+        X: =10
+        Y: =ctnHeaderDS.Y+ctnHeaderDS.Height+5
+        ZIndex: =2
+
+        ctnMenuCS As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.ExtraBold
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =80
+            Width: =Parent.Width/1.02
+            ZIndex: =8
+
+            lblMenuCS As label:
+                AutoHeight: =true
+                Color: =RGBA(255, 0, 0, 1)
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =If(Parent.Width<500,10,12)
+                Text: =ThisItem.Title
+                Width: =Parent.Width-iconMenuCS.Width-lineIndicatorCS.Width
+                X: =45.83006535947712
+                Y: =30
+                ZIndex: =1
+
+            iconMenuCS As icon.Add:
+                Color: =RGBA(255, 0, 0, 1)
+                Height: =Parent.Height/4.5
+                Icon: =ThisItem.icon
+                Width: =Parent.Width/4.5
+                X: =12
+                Y: =30
+                ZIndex: =3
+
+            btnMensuCS As button:
+                Fill: =RGBA(0, 0, 0, 0)
+                Height: =80
+                HoverFill: =
+                OnSelect: |
+                    =Navigate(ThisItem.Navigate);
+                PressedFill: =
+                Size: =24
+                Text: =""
+                Width: =Parent.Width
+                ZIndex: =4
+
+            lineIndicatorCS As rectangle:
+                BorderColor: =RGBA(255, 0, 0, 1)
+                BorderThickness: =5
+                Fill: =RGBA(255, 0, 0, 1)
+                Height: =Parent.Height
+                Visible: =If(ThisItem.Navigate=DashboardScreen,true,false)
+                Width: =4
+                X: =1
+                ZIndex: =5
 
