--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -1,5 +1,7 @@
 DashboardScreen As screen:
-    OnVisible: =Refresh(LeadInformations);
+    OnVisible: |-
+        =Refresh(LeadInformations);
+        Set(varshowMenu,!varshowMenu);
 
     ctnMainDS As groupContainer.horizontalAutoLayoutContainer:
         DropShadow: =DropShadow.None
@@ -790,30 +792,30 @@ DashboardScreen As screen:
                     Width: =Parent.Width
                     ZIndex: =1
 
-    "Gallery2 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+    "glryMenuBarDS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
         BorderColor: =RGBA(255, 255, 255, 1)
         BorderThickness: =1
         Fill: =RGBA(237, 237, 237, 1)
-        Height: =1.08*(CountRows(Gallery2.AllItems)*(Gallery2.TemplateHeight))
+        Height: =1.08*(CountRows(glryMenuBarDS.AllItems)*(glryMenuBarDS.TemplateHeight))
         Items: =Menu
         Layout: =Layout.Vertical
         ShowScrollbar: =false
         TemplatePadding: =0
-        TemplateSize: =110
+        TemplateSize: =90
         Visible: =varshowMenu
-        Width: =219
+        Width: =Parent.Width/4
         X: =10
         Y: =ctnHeaderDS.Y+ctnHeaderDS.Height+5
         ZIndex: =2
 
-        Container10 As groupContainer.manualLayoutContainer:
+        ctnMenuDS As groupContainer.manualLayoutContainer:
             DropShadow: =DropShadow.ExtraBold
             Fill: =RGBA(255, 255, 255, 1)
-            Height: =100
-            Width: =Parent.Width/1.05
+            Height: =80
+            Width: =Parent.Width/1.02
             ZIndex: =8
 
-            Title4_11 As label:
+            lblMenuDS As label:
                 AutoHeight: =true
                 Color: =RGBA(255, 0, 0, 1)
                 Height: =24
@@ -821,59 +823,42 @@ DashboardScreen As screen:
                 PaddingLeft: =0
                 PaddingRight: =0
                 PaddingTop: =0
+                Size: =If(Parent.Width<500,10,12)
                 Text: =ThisItem.Title
-                Width: =147
-                X: =61.571428571428555
+                Width: =Parent.Width-iconMenuDS.Width-lineIndicatorDS.Width
+                X: =iconMenuDS.Width+iconMenuDS.X
                 Y: =30
                 ZIndex: =1
 
-            Separator4_11 As rectangle:
-                BorderColor: =RGBA(0, 0, 0, 1)
-                Fill: =RGBA(0, 0, 0, 1)
-                Height: =0
-                Width: =Parent.Width-20
-                X: =10
-                Y: =Parent.Height - 20
-                ZIndex: =2
-
-            Icon1_13 As icon.Add:
+            iconMenuDS As icon.Add:
                 Color: =RGBA(255, 0, 0, 1)
-                Height: =34
+                Height: =Parent.Height/4.5
                 Icon: =ThisItem.icon
-                Width: =45
+                Width: =Parent.Width/4.5
                 X: =12
                 Y: =30
                 ZIndex: =3
 
-            Button9_11 As button:
+            btnMensuDS As button:
                 Fill: =RGBA(0, 0, 0, 0)
-                Height: =100
+                Height: =80
                 HoverFill: =
-                OnSelect: |-
-                    =Navigate(ThisItem.Navigate);
-                    Set(VarFormMode,Defaults(LeadInformations));
-                    Set(Varmenubar,ThisItem.Navigate);
-                    Set(VarIndicator,false);
-                    NewForm(BuildingInfoForm);ResetForm(BuildingInfoForm);
-                    NewForm(EstimateForm);
-                    NewForm(ScopeInfoForm);
-                    NewForm(UnitInfoForm);
-                    ResetForm(EstimateForm);
-                    ResetForm(ScopeInfoForm);
-                    ResetForm(UnitInfoForm);
+                OnSelect: |+
+                    =Navigate(ThisItem.Navigate);Set(varshowMenu,!varshowMenu);
+                    
                 PressedFill: =
                 Size: =24
                 Text: =""
                 Width: =Parent.Width
                 ZIndex: =4
 
-            Rectangle4_11 As rectangle:
+            lineIndicatorDS As rectangle:
                 BorderColor: =RGBA(255, 0, 0, 1)
                 BorderThickness: =5
                 Fill: =RGBA(255, 0, 0, 1)
                 Height: =Parent.Height
                 Visible: =If(ThisItem.Navigate=DashboardScreen,true,false)
-                Width: =5
+                Width: =4
                 X: =1
                 ZIndex: =5
 
