--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -1,7 +1,8 @@
 UnitScreen As screen:
-    OnVisible: |-
+    OnVisible: |
         =If(IsBlank(IntxtUnitCount),Set(VarUnitDescription,false));
         If(IsBlank(IntxtUnitDescription),Set(VarUnitCount,false));
+        Set(varshowMenu,!varshowMenu);
 
     ctnMainUS As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(237, 237, 237, 1)
@@ -39,7 +40,7 @@ UnitScreen As screen:
                 Color: =RGBA(0, 0, 0, 1)
                 Height: =Parent.Height
                 Icon: =Icon.Hamburger
-                OnSelect: =
+                OnSelect: =Set(varshowMenu,!varshowMenu);
                 PaddingBottom: =Parent.Height/3
                 PaddingTop: =Parent.Height/3
                 Width: =Parent.Height
@@ -640,4 +641,73 @@ UnitScreen As screen:
                     Transparency: =0.9
                     Width: =Parent.Width
                     ZIndex: =1
+
+    "glryMenuBarUS As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        BorderColor: =RGBA(255, 255, 255, 1)
+        BorderThickness: =1
+        Fill: =RGBA(237, 237, 237, 1)
+        Height: =1.08*(CountRows(glryMenuBarUS.AllItems)*(glryMenuBarUS.TemplateHeight))
+        Items: =Menu
+        Layout: =Layout.Vertical
+        ShowScrollbar: =false
+        TemplatePadding: =0
+        TemplateSize: =90
+        Visible: =varshowMenu
+        Width: =Parent.Width/4
+        X: =10
+        Y: =ctnHeaderDS.Y+ctnHeaderDS.Height+5
+        ZIndex: =2
+
+        ctnMenuUS As groupContainer.manualLayoutContainer:
+            DropShadow: =DropShadow.ExtraBold
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =80
+            Width: =Parent.Width/1.02
+            ZIndex: =8
+
+            lblMenuUS As label:
+                AutoHeight: =true
+                Color: =RGBA(255, 0, 0, 1)
+                Height: =24
+                PaddingBottom: =0
+                PaddingLeft: =0
+                PaddingRight: =0
+                PaddingTop: =0
+                Size: =If(Parent.Width<500,10,12)
+                Text: =ThisItem.Title
+                Width: =Parent.Width-iconMenuUS.Width-lineIndicatorUS.Width
+                X: =iconMenuUS.Width+iconMenuUS.X
+                Y: =30
+                ZIndex: =1
+
+            iconMenuUS As icon.Add:
+                Color: =RGBA(255, 0, 0, 1)
+                Height: =Parent.Height/4.5
+                Icon: =ThisItem.icon
+                Width: =Parent.Width/4.5
+                X: =12
+                Y: =30
+                ZIndex: =3
+
+            btnMensuUS As button:
+                Fill: =RGBA(0, 0, 0, 0)
+                Height: =80
+                HoverFill: =
+                OnSelect: |
+                    =Navigate(ThisItem.Navigate);
+                PressedFill: =
+                Size: =24
+                Text: =""
+                Width: =Parent.Width
+                ZIndex: =4
+
+            lineIndicatorUS As rectangle:
+                BorderColor: =RGBA(255, 0, 0, 1)
+                BorderThickness: =5
+                Fill: =RGBA(255, 0, 0, 1)
+                Height: =Parent.Height
+                Visible: =If(ThisItem.Navigate=DashboardScreen,true,false)
+                Width: =4
+                X: =1
+                ZIndex: =5
 
