--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -412,7 +412,7 @@ LeadScreen As screen:
                         Height: =3
                         Width: =Parent.Width-30
                         X: =10
-                        Y: =lblsenderreceiverLdS.Height+lblsenderreceiverLdS.Y
+                        Y: =lblsenderreceiverLdS.Height+lblsenderreceiverLdS.Y+5
                         ZIndex: =4
 
                 txtinptchatmessageldS As text:
