--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1444,6 +1444,7 @@ LeadScreen As screen:
         OnTimerEnd: =Refresh(LeadChats);
         Repeat: =true
         Start: =VarLeadMessages
+        Visible: =false
         X: =40
         Y: =40
         ZIndex: =13
