--- a/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ScopeScreen.fx.yaml
@@ -604,7 +604,7 @@ ScopeScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =lblManuallyScopeofwork.Y + lblManuallyScopeofwork.Height/2
+                        Y: =lblManuallyScopeofwork.Y + lblManuallyScopeofwork.Height
                         ZIndex: =1
 
                     ErrorMessageManuallyScopeofwork As label:
