--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -433,7 +433,7 @@ UnitScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =lblUnitCount.Y + lblUnitCount.Height /2
+                        Y: =lblUnitCount.Y + lblUnitCount.Height 
                         ZIndex: =1
 
                     ErrorMessageUnitCount As label:
@@ -519,7 +519,7 @@ UnitScreen As screen:
                         Tooltip: =Parent.DisplayName
                         Width: =Parent.Width - 60
                         X: =30
-                        Y: =lblUnitDescription.Y + lblUnitDescription.Height /2
+                        Y: =lblUnitDescription.Y + lblUnitDescription.Height 
                         ZIndex: =1
 
                     ErrorMessageUnitDescription As label:
