--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -144,6 +144,7 @@ ViewDetailsScreen As screen:
 
         Container2 As groupContainer.verticalAutoLayoutContainer:
             AlignInContainer: =AlignInContainer.Center
+            Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
             Height: =SummaryForm_3.Height+glryImageLSS_2.Height
             LayoutDirection: =LayoutDirection.Vertical
@@ -151,6 +152,8 @@ ViewDetailsScreen As screen:
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             LayoutOverflowY: =LayoutOverflow.Scroll
+            PaddingLeft: =10
+            PaddingRight: =10
             Width: =Parent.Width-20
             ZIndex: =3
 
@@ -1347,7 +1350,6 @@ ViewDetailsScreen As screen:
                         ZIndex: =5
 
             "glryImageLSS_2 As gallery.'BrowseLayout_Vertical_OneImageTwoColumnVariant_ver5.0'":
-                AlignInContainer: =AlignInContainer.Center
                 BorderColor: =RGBA(39, 113, 194, 1)
                 DelayItemLoading: =true
                 Fill: =RGBA(255, 255, 255, 1)
@@ -1382,7 +1384,6 @@ ViewDetailsScreen As screen:
                     RadiusTopLeft: =8
                     RadiusTopRight: =8
                     Width: =Parent.TemplateWidth/1.10
-                    X: =20
                     ZIndex: =1
 
     grpMenuDS_6 As group:
